--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <input type="text" class="input-box" placeholder="Add your task">
             <button class="add-btn">Add</button>
         </div>
+
+        <div class="todos">
+            <input type="checkbox" class="checkbox-round">
+            <input type="checkbox" class="checkbox-round">
+        </div>
     </div>
 
     
