Testing out how to make the tasks look style-wise and slowly starting on how to get the add button to actually make these appear

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         </div>
 
         <div class="todos">
-            <!--
-            <input type="checkbox" class="checkbox-round">
-            <input type="checkbox" class="checkbox-round"> 
-            -->
+            <div class="task">
+                <input type="checkbox" class="checkbox-round">
+                <div class="task-text">test task</div>
+            </div>
+            <div class="task">
+                <input type="checkbox" class="checkbox-round"> 
+                <div class="task-text">test task 2</div>
+            </div>
+            
+            
         </div>
     </div>
 
