--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
         </div>
 
         <div class="todos">
-            <div class="task">
-                <input type="checkbox" class="checkbox-round">
-                <div class="task-text">test task</div>
+            <div class="task-bundle">
+                <div class="task">
+                    <input type="checkbox" class="checkbox-round">
+                    <div class="task-text">test task</div>
+                </div>
+                <div class="cross">X</div>
             </div>
+            
             <div class="task">
                 <input type="checkbox" class="checkbox-round"> 
                 <div class="task-text">test task 2</div>
