can add todo rows, trying to add functionality to the cross

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
 
         <div class="todos">
-            <div class="task-bundle">
+
+            <!-- <div class="task-bundle">
                 <div class="task">
                     <input type="checkbox" class="checkbox-round">
                     <div class="task-text">test task</div>
@@ -27,8 +28,7 @@
             <div class="task">
                 <input type="checkbox" class="checkbox-round"> 
                 <div class="task-text">test task 2</div>
-            </div>
-            
+            </div> -->
             
         </div>
     </div>
